--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Easy Jotai with Jotaish 🃏",
     "author": "danpacho",
     "license": "MIT",
-    "private": true,
+    "private": false,
     "type": "module",
     "homepage": "https://github.com/danpacho/jotaish#readme",
     "repository": {
