--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ],
     "main": "./dist/jotaish.es.js",
     "module": "./dist/jotaish.es.js",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "require": "./dist/jotaish.umd.js",
