--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "jotaish",
     "version": "1.0.1",
-    "description": "Easy Jotai with Jotaish 🃏",
+    "description": "Better Jotai DX with Jotaish 🃏",
     "author": "danpacho",
     "license": "MIT",
     "private": false,
-    "type": "module",
     "homepage": "https://github.com/danpacho/jotaish#readme",
     "repository": {
         "type": "git",
@@ -22,6 +21,7 @@
     "scripts": {
         "build": "tsc && vite build"
     },
+    "type": "module",
     "files": [
         "dist"
     ],
@@ -40,7 +40,6 @@
     },
     "devDependencies": {
         "@types/react": "^18.0.15",
-        "@vitejs/plugin-react": "^2.0.0",
         "typescript": "^4.6.4",
         "vite": "^3.0.0",
         "vite-plugin-dts": "^1.4.1"
