--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ lerna-debug.log*
 node_modules
 *.local
 
+# build result
+dist
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
